# vsc-solvers

./: .gitignore  CMakeLists.txt  README.md  ivpm.yaml  setup.py
.github/workflows/: ci.yml
examples/sv_solve/: runit.sh  top.sv
python/: core.pyx
python/libvsc_solvers/: core.pxd  decl.pxd
python/vsc_solvers/: __init__.py  core.pxd  decl.pxd  pkginfo.py
scripts/: build_libgmp_macos.sh  build_libgmp_win64.sh  build_linux.sh
src/: CMakeLists.txt  CommitFieldValueVisitor.cpp  CommitFieldValueVisitor.h  CompoundSolver.cpp  CompoundSolver.h  CompoundSolverDefault.cpp  CompoundSolverDefault.h  Factory.cpp  Factory.h  RNG.cpp  RNG.h  RandState.cpp  RandState.h  RandStateLehmer_32.cpp  RandStateLehmer_32.h  RandStateLehmer_64.cpp  RandStateLehmer_64.h  RandStateLehmer_64_dual.cpp  RandStateLehmer_64_dual.h  RandStateMt19937_64.cpp  RandStateMt19937_64.h  Randomizer.cpp  Randomizer.h  SetFieldUsedRandVisitor.cpp  SetFieldUsedRandVisitor.h  SolveSet.cpp  SolveSet.h  SolveSetSolveModelBuilder.cpp  SolveSetSolveModelBuilder.h  SolveSetSwizzlerPartsel.cpp  SolveSetSwizzlerPartsel.h  SolveSpec.cpp  SolveSpec.h  SolveSpecBuilder.cpp  SolveSpecBuilder.h  SolverBitwuzla.cpp  SolverBitwuzla.h  SolverBitwuzlaSolveModelBuilder.cpp  SolverBitwuzlaSolveModelBuilder.h  SolverBoolector.cpp  (+25 more)
src/include/vsc/solvers/: FactoryExt.h  ICompoundSolver.h  IFactory.h  IRandState.h  IRandomizer.h  ISolveSet.h  ISolver.h  ISolverFactory.h  SolveFlags.h  SolveFlagsSet.h
src/include/vsc/solvers/impl/: BuildConstraintVisitor.h  RefPathConstraint.h  RefPathField.h  RefPathMap.h  RefPathPtrMap.h  RefPathSet.h  TaskBuildSolveSets.h  TaskPath2Constraint.h  TaskPath2Field.h  TaskPath2ValRef.h  TaskUnrollModelIterativeConstraints.h
src/include/vsc/solvers/sv/: vsc_constraint_set.svh  vsc_expr.svh  vsc_expr_bit.svh  vsc_expr_lt_u.svh  vsc_expr_zext.svh  vsc_if_else.svh  vsc_solvers.sv  vsc_var_bit.svh
tests/: CMakeLists.txt  TestModelFieldRef.cpp  TestModelFieldRef.h  TestModelFieldVecConstrainedSz.cpp  TestModelFieldVecConstrainedSz.h  TestModelFieldVecUnconstrainedSz.cpp
tests/src/: TestBase.cpp  TestBase.h  TestBuildSolveSets.cpp  TestBuildSolveSets.h  TestConstraintsLinear.cpp  TestConstraintsLinear.h  TestModelFieldFactory.cpp  TestModelFieldFactory.h  TestRefPathSet.cpp  TestRefPathSet.h  TestUnconstrainedRandomization.cpp  TestUnconstrainedRandomization.h
